https://github.com/nimas854/SDA101_02240358.git

--- a/first.HTML
+++ b/first.HTML
@@ -18,6 +18,12 @@
     <label for="email">Email:</label>
     <input type="text"> <br><br>
 
+    <label for="phone number">Phone Number:</label>
+    <input type="number"> <br><br> 
+    
+    <label for="password">Password:</label>
+    <input type="password"> <br><br>  
+
     <label for="gender">Gender</label>
     <label for="male">Male</label>
     <input type="radio" name="gender">
@@ -25,6 +31,7 @@
     <input type="radio" name="gender">
     <label for="other">Other</label>
     <input type="radio" name="gender">
-  
+
+    
 </body>
 </html>             
