--- a/.HTML
+++ b/.HTML
@@ -1,6 +1,66 @@
-box{
-    width: 300px;
-    padding: 20px;
-    border: 30px;
-
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Weekly Course Schedule</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Time</th>
+                <th>Monday</th>
+                <th>Tuesday</th>
+                <th>Wednesday</th>
+                <th>Thursday</th>
+                <th>Friday</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>9:00 AM - 11:00 AM</td>
+                <td>Course 1</td>
+                <td>Course 2</td>
+                <td>Course 1</td>
+                <td>Course 3</td>
+                <td>Course 1</td>
+            </tr>
+            <tr>
+                <td>11:00 AM - 1:00 PM</td>
+                <td>Course 2</td>
+                <td>Course 3</td>
+                <td>Course 2</td>
+                <td>Course 1</td>
+                <td>Course 2</td>
+            </tr>
+            <tr>
+                <td>1:00 PM - 3:00 PM</td>
+                <td>Course 3</td>
+                <td>Course 1</td>
+                <td>Course 3</td>
+                <td>Course 2</td>
+                <td>Course 3</td>
+            </tr>
+            <tr>
+                <td>3:00 PM - 5:00 PM</td>
+                <td>Course 1</td>
+                <td>Course 2</td>
+                <td>Course 1</td>
+                <td>Course 3</td>
+                <td>Course 1</td>
+            </tr>
+            <tr>
+                <td>5:00 PM - 7:00 PM</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
+    
+</body>
+</html>
