--- a/Presentation/Text Node.html
+++ b/Presentation/Text Node.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+   <script>
+    // Example: Accessing the text content of a text node
+let textNode = document.createTextNode("Hello World");
+console.log(textNode.nodeValue); // Outputs: "Hello World"
+
+   </script>
     
 </body>
 </html>
