--- a/practical 7/New assignment.html
+++ b/practical 7/New assignment.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Button</title>
+    <link rel="stylesheet" href="New assignment.css">
+
+
 </head>
 <body>
+<div class="checkbox-con">
+  <input id="checkbox" type="checkbox">
+</div>
     
 </body>
 </html>
